--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
                 contact
             </p>
             <p style="color: black; font-size:15px">
-                download CV   <img style="width:4%" src="Image2/DWN.png">
+                download CV   <img style="width:4%" src="/Image2/DWN.png">
             </p>
             <center>
             <img
             style="
             width: 9%; image-"
-            src="Image2/IG.png"
+            src="/Image2/IG.png"
             />
             <img
             style="
             width: 10%;"
-            src="Image2/FB.png"
+            src="/Image2/FB.png"
             />
             <img
             style="
             width: 9%;"
-            src="Image2/TWT.png"
+            src="/Image2/TWT.png"
             />
             <img
             style="
             width: 9%;"
-            src="Image2/YT.png"
+            src="/Image2/YT.png"
             />
         </center>
             <img  
@@ -50,7 +50,7 @@
                     width: 100%;
                     box-shadow:0 0 10px red; 
                     border-radius: 7px 7px 0 0"
-                src="Image2/Luffy.jpg"
+                src="/Image2/Luffy.jpg"
                 alt="Gambar Luffy" />
             
             
