--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     width: 100%;
                     box-shadow:0 0 10px red; 
                     border-radius: 7px 7px 0 0"
-                src="/Image2/Luffy.jpg"
+                src="/Luffy.jpg"
                 alt="Gambar Luffy" />
             
             
