--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
                 contact
             </p>
             <p style="color: black; font-size:15px">
-                download CV   <img style="width:4%" src="/Image2/DWN.png">
+                download CV   <img style="width:4%" src="/DWN.png">
             </p>
             <center>
             <img
             style="
             width: 9%; image-"
-            src="/Image2/IG.png"
+            src="/IG.png"
             />
             <img
             style="
             width: 10%;"
-            src="/Image2/FB.png"
+            src="/FB.png"
             />
             <img
             style="
             width: 9%;"
-            src="/Image2/TWT.png"
+            src="/TWT.png"
             />
             <img
             style="
             width: 9%;"
-            src="/Image2/YT.png"
+            src="/YT.png"
             />
         </center>
             <img  
